--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.2.6",
+    "button": "^1.1.1",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google": "^0.0.3",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
