--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.6",
+    "bootstrap": "^5.2.3",
     "button": "^1.1.1",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
